<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="AxisStatus" Id="{b6b19266-60ab-4664-95b4-febab0c3e648}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE AxisStatus :
(
	Ready,
	STO_Active,
	Faulted
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>