<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_ComboboxEntry" Id="{1cfe0d6f-9ab2-424e-b791-4fb3d7ae48b7}">
    <Declaration><![CDATA[TYPE ST_ComboboxEntry:
STRUCT
    id : INT;
    text : WSTRING;
    value : INT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>